# dungeon-rpg-practice

./: .gitignore  .gitmessage  CMakeLists.txt  README.md  compile_commands.json  main.cpp
components/: logic.hpp
src/: main.cpp
src/components/: ai.hpp  combat.hpp  equipment.hpp  globals.hpp  movement.hpp  objects.hpp  rendering.hpp
src/engine/: game.cpp  game.hpp  initialize.cpp  keypress.cpp  menu.cpp  menu.hpp  render.cpp  render.hpp  state_combat.cpp  state_paused.cpp  state_walking.cpp  types_and_defines.hpp
src/engine/rendering/: render.cpp  render.hpp  render_combat.cpp  render_paused.cpp
src/systems/AI/: ai.cpp  ai.hpp
src/systems/combat/: action_perform.cpp  action_perform.hpp  buff_debuff.cpp  buff_debuff.hpp  damage.cpp  damage.hpp
src/systems/input/: keypress.cpp  keypress.hpp
src/systems/loading/: initialize.cpp  initialize.hpp
src/systems/logic/: logic.cpp  logic.hpp
src/systems/movement/: direction.hpp  movement.cpp  movement.hpp
src/systems/rendering/: render.cpp  render.hpp
src/systems/transition/: transition.cpp  transition.hpp
src/utils/: debug.cpp  debug.hpp  globals.cpp  globals.hpp
systems/AI/: ai.cpp  ai.hpp
systems/input/: keypress.cpp
systems/loading/: initialize.cpp  initialize.hpp
systems/logic/: logic.cpp
